# patternrecognition-group1

./: .gitignore  README.md  main.py  pyproject.toml
CNN/competitions/: main.py
CNN/competitions/src/: ImageDataset.py  utils.py
CNN/competitions/src/models/: CNN.py
CNN/exploration/: Exercise2_CNN.py  cnn_experiments.py
HAD_SVM/: SVM-linear_sk.py  SVM-rbf_SCI.py  SVM_RBF_SCI_C.py
MLP/: 2L_MLP.ipynb
SVM/: SVM-linear_sk.py  SVM-rbf_SCI.py  SVM_RBF_SCI_C.py
src/: ImageDataset.py  utils.py
src/models/: CNN.py
